# JackPusher

app/: build.gradle
app/src/androidTest/java/com/gxa/jackpusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/gxa/jackpusher/: AudioChannel.java  CameraHelper.java  JackPusher.java  MainActivity.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gxa/jackpusher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
